forge/tests/error/froglet-is-linear0.frg
#lang froglet
option run_sterling off

sig Node {
    next: lone Node
}

pred pp {
    next is linear
}

